update register logic
